--- a/index.html
+++ b/index.html
@@ -7,164 +7,151 @@
     <script defer>
         document.addEventListener("DOMContentLoaded", () => {
             let timers = [60, 60, 60, 60];
-            let teamNames = ["Team 1", "Team 2", "Team 3", "Team 4"];
+            let teamNamen = ["Team 1", "Team 2", "Team 3", "Team 4"];
             let intervals = [null, null, null, null];
-            let selectedTimer = 0;
-            let visibleTimers = [true, true, true, true];
+            let geselecteerdeTimer = 0;
+            let zichtbareTimers = [true, true, true, true];
 
-            function updateDisplay() {
-                timers.forEach((time, index) => {
-                    document.getElementById(`timer${index}`).textContent = time;
-                    document.getElementById(`team-name-${index}`).textContent = teamNames[index];
-                    document.getElementById(`timer-container-${index}`).style.display = visibleTimers[index] ? "block" : "none";
+            function updateWeergave() {
+                timers.forEach((tijd, index) => {
+                    document.getElementById(`timer${index}`).textContent = tijd;
+                    document.getElementById(`team-name-${index}`).textContent = teamNamen[index];
+                    document.getElementById(`timer-container-${index}`).style.display = zichtbareTimers[index] ? "block" : "none";
                 });
             }
 
-            function selectTimer(index) {
+            function selecteerTimer(index) {
                 document.querySelectorAll(".timer").forEach(el => el.classList.remove("selected"));
-                selectedTimer = index;
+                geselecteerdeTimer = index;
                 document.getElementById(`timer-container-${index}`).classList.add("selected");
+                document.getElementById("timerSelect").value = index; // Synchroniseer dropdown
             }
 
             function startTimer() {
-                if (intervals[selectedTimer]) return;
-                intervals[selectedTimer] = setInterval(() => {
-                    if (timers[selectedTimer] > 0) {
-                        timers[selectedTimer]--;
-                        updateDisplay();
+                if (intervals[geselecteerdeTimer]) return;
+                intervals[geselecteerdeTimer] = setInterval(() => {
+                    if (timers[geselecteerdeTimer] > 0) {
+                        timers[geselecteerdeTimer]--;
+                        updateWeergave();
                     }
                 }, 1000);
             }
 
             function stopTimer() {
-                clearInterval(intervals[selectedTimer]);
-                intervals[selectedTimer] = null;
+                clearInterval(intervals[geselecteerdeTimer]);
+                intervals[geselecteerdeTimer] = null;
             }
 
             function resetTimer() {
                 timers = [60, 60, 60, 60];
-                updateDisplay();
+                updateWeergave();
             }
 
-            function adjustTime(amount) {
-                timers[selectedTimer] = Math.max(0, timers[selectedTimer] + amount);
-                updateDisplay();
+            function pasTijdAan(aantal) {
+                timers[geselecteerdeTimer] = Math.max(0, timers[geselecteerdeTimer] + aantal);
+                updateWeergave();
             }
 
-            function toggleTimerVisibility() {
-                visibleTimers[selectedTimer] = !visibleTimers[selectedTimer];
-                updateDisplay();
+            function toggleTimerZichtbaarheid() {
+                zichtbareTimers[geselecteerdeTimer] = !zichtbareTimers[geselecteerdeTimer];
+                updateWeergave();
             }
 
-            function setCustomTime() {
-                const inputSeconds = parseInt(document.getElementById("timeInput").value);
-                if (!isNaN(inputSeconds)) {
-                    timers[selectedTimer] = inputSeconds;
-                    updateDisplay();
+            function stelAangepasteTijdIn() {
+                const invoerSeconden = parseInt(document.getElementById("timeInput").value);
+                if (!isNaN(invoerSeconden) && invoerSeconden >= 0) {
+                    timers[geselecteerdeTimer] = invoerSeconden;
+                    updateWeergave();
+                } else {
+                    alert("Voer een geldig aantal seconden in (minimaal 0)");
                 }
             }
 
-            function editTeamName(index) {
-                let newName = prompt("Voer een nieuwe teamnaam in:", teamNames[index]);
-                if (newName) {
-                    teamNames[index] = newName;
-                    updateDisplay();
+            function wijzigTeamNaam(index) {
+                let nieuweNaam = prompt("Voer een nieuwe teamnaam in:", teamNamen[index]);
+                if (nieuweNaam) {
+                    teamNamen[index] = nieuweNaam;
+                    updateWeergave();
                 }
             }
 
+            // **Event Listeners Toevoegen**
             document.getElementById("timerSelect").addEventListener("change", (event) => {
-                selectTimer(parseInt(event.target.value));
+                selecteerTimer(parseInt(event.target.value));
             });
 
-            selectTimer(0);
-            updateDisplay();
+            document.getElementById("timeInput").addEventListener("keydown", (event) => {
+                if (event.key === "Enter") stelAangepasteTijdIn();
+            });
+
+            document.querySelectorAll(".timer").forEach((el, index) => {
+                el.addEventListener("click", () => selecteerTimer(index));
+                el.querySelector("div:first-child").addEventListener("click", (e) => {
+                    e.stopPropagation();
+                    wijzigTeamNaam(index);
+                });
+            });
+
+            document.getElementById("startBtn").addEventListener("click", startTimer);
+            document.getElementById("stopBtn").addEventListener("click", stopTimer);
+            document.getElementById("resetBtn").addEventListener("click", resetTimer);
+            document.getElementById("toggleBtn").addEventListener("click", toggleTimerZichtbaarheid);
+            document.getElementById("setTimeBtn").addEventListener("click", stelAangepasteTijdIn);
+
+            document.querySelectorAll(".adjust-time").forEach(button => {
+                button.addEventListener("click", () => pasTijdAan(parseInt(button.dataset.amount)));
+            });
+
+            selecteerTimer(0);
+            updateWeergave();
         });
     </script>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f5f5f5;
-        }
-        h1 {
-            font-size: 80px;
-        }
-        .timer-container {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-bottom: 20px;
-        }
+        body { font-family: Arial, sans-serif; text-align: center; background-color: #f5f5f5; }
+        h1 { font-size: 80px; }
+        .timer-container { display: flex; justify-content: center; gap: 20px; margin-bottom: 20px; }
         .timer {
-            width: 300px;
-            height: 300px;
-            border: 6px solid white;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            font-size: 80px;
-            font-weight: bold;
-            color: red;
-            background-color: white;
-            border-radius: 20px;
+            width: 300px; height: 300px; border: 6px solid white; display: flex;
+            flex-direction: column; justify-content: center; align-items: center;
+            font-size: 80px; font-weight: bold; color: red; background-color: white; border-radius: 20px;
         }
-        .controls {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 10px;
-            margin-top: 20px;
-        }
-        .row {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-        }
-        button {
-            background-color: red;
-            color: white;
-            border: none;
-            padding: 10px;
-            font-size: 16px;
-            border-radius: 5px;
-        }
-        .selected {
-            border: 6px solid red;
-        }
+        .controls { display: flex; flex-direction: column; align-items: center; gap: 10px; margin-top: 20px; }
+        .row { display: flex; justify-content: center; gap: 10px; }
+        button { background-color: red; color: white; border: none; padding: 10px; font-size: 16px; border-radius: 5px; }
+        .selected { border: 6px solid red; }
     </style>
 </head>
 <body>
-    <h1>De slimste kameraad</h1>
+    <h1>De Slimste Kameraad</h1>
     <div class="timer-container">
-        <div class="timer" id="timer-container-0" onclick="selectTimer(0)">
-            <div id="team-name-0" onclick="editTeamName(0)">Team 1</div>
+        <div class="timer" id="timer-container-0">
+            <div id="team-name-0">Team 1</div>
             <div id="timer0">60</div>
         </div>
-        <div class="timer" id="timer-container-1" onclick="selectTimer(1)">
-            <div id="team-name-1" onclick="editTeamName(1)">Team 2</div>
+        <div class="timer" id="timer-container-1">
+            <div id="team-name-1">Team 2</div>
             <div id="timer1">60</div>
         </div>
-        <div class="timer" id="timer-container-2" onclick="selectTimer(2)">
-            <div id="team-name-2" onclick="editTeamName(2)">Team 3</div>
+        <div class="timer" id="timer-container-2">
+            <div id="team-name-2">Team 3</div>
             <div id="timer2">60</div>
         </div>
-        <div class="timer" id="timer-container-3" onclick="selectTimer(3)">
-            <div id="team-name-3" onclick="editTeamName(3)">Team 4</div>
+        <div class="timer" id="timer-container-3">
+            <div id="team-name-3">Team 4</div>
             <div id="timer3">60</div>
         </div>
     </div>
     <div class="controls">
         <div class="row">
-            <button onclick="startTimer()">Start</button>
-            <button onclick="stopTimer()">Stop</button>
-            <button onclick="resetTimer()">Reset</button>
-            <button onclick="adjustTime(10)">+10 sec</button>
-            <button onclick="adjustTime(20)">+20 sec</button>
-            <button onclick="adjustTime(30)">+30 sec</button>
-            <button onclick="adjustTime(40)">+40 sec</button>
-            <button onclick="adjustTime(50)">+50 sec</button>
-            <button onclick="adjustTime(-20)">-20 sec</button>
+            <button id="startBtn">Start</button>
+            <button id="stopBtn">Stop</button>
+            <button id="resetBtn">Reset</button>
+            <button class="adjust-time" data-amount="10">+10 sec</button>
+            <button class="adjust-time" data-amount="20">+20 sec</button>
+            <button class="adjust-time" data-amount="30">+30 sec</button>
+            <button class="adjust-time" data-amount="40">+40 sec</button>
+            <button class="adjust-time" data-amount="50">+50 sec</button>
+            <button class="adjust-time" data-amount="-20">-20 sec</button>
         </div>
         <div class="row">
             <select id="timerSelect">
@@ -173,9 +160,9 @@
                 <option value="2">Timer 3</option>
                 <option value="3">Timer 4</option>
             </select>
-            <button onclick="toggleTimerVisibility()">Zichtbaar ja/nee</button>
+            <button id="toggleBtn">Zichtbaar ja/nee</button>
             <input type="number" id="timeInput" placeholder="Voer seconden in">
-            <button onclick="setCustomTime()">Doorvoeren</button>
+            <button id="setTimeBtn">Doorvoeren</button>
         </div>
     </div>
 </body>
