--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     document.getElementById(`timer${index}`).textContent = tijd;
                     let teamNaamEl = document.getElementById(`team-name-${index}`);
 
+                    // Als het een input is (teamnaam wordt bewerkt), zet het terug naar div
                     if (teamNaamEl.tagName.toLowerCase() === "input") {
                         let nieuwNaamDiv = document.createElement("div");
                         nieuwNaamDiv.id = `team-name-${index}`;
@@ -104,6 +105,7 @@
                 updateWeergave();
             }
 
+            // **Event Listeners Toevoegen**
             document.querySelectorAll(".timer").forEach((el, index) => {
                 el.addEventListener("click", () => selecteerTimer(index));
             });
@@ -133,10 +135,10 @@
         .timer {
             width: 300px; height: 300px; border: 6px solid white; display: flex;
             flex-direction: column; justify-content: center; align-items: center;
-            font-size: 120px; font-weight: bold; color: red; background-color: white; border-radius: 20px;
+            font-size: 80px; font-weight: bold; color: red; background-color: white; border-radius: 20px;
         }
         .team-name {
-            font-size: 40px;
+            font-size: 24px;
             font-weight: bold;
             color: black;
             cursor: pointer;
@@ -150,7 +152,7 @@
             border: none;
             outline: none;
         }
-        .controls { display: flex; flex-direction: column; align-items: center; gap: 10px; margin-top: 50px; }
+        .controls { display: flex; flex-direction: column; align-items: center; gap: 10px; margin-top: 20px; }
         .row { display: flex; justify-content: center; gap: 10px; }
         button { background-color: red; color: white; border: none; padding: 10px; font-size: 16px; border-radius: 5px; }
         .selected { border: 6px solid red; }
