--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                     document.getElementById(`timer${index}`).textContent = tijd;
                     let teamNaamEl = document.getElementById(`team-name-${index}`);
 
-                    // Als het een input is (teamnaam wordt bewerkt), zet het terug naar div
                     if (teamNaamEl.tagName.toLowerCase() === "input") {
                         let nieuwNaamDiv = document.createElement("div");
                         nieuwNaamDiv.id = `team-name-${index}`;
@@ -105,7 +104,7 @@
                 updateWeergave();
             }
 
-            // **Event Listeners Toevoegen**
+            // Event listeners voor timer en knoppen
             document.querySelectorAll(".timer").forEach((el, index) => {
                 el.addEventListener("click", () => selecteerTimer(index));
             });
@@ -129,13 +128,34 @@
         });
     </script>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; background-color: #f5f5f5; }
-        h1 { font-size: 80px; }
-        .timer-container { display: flex; justify-content: center; gap: 20px; margin-bottom: 20px; }
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f5f5f5;
+        }
+        h1 {
+            font-size: 80px;
+        }
+        .timer-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 20px;
+            flex-wrap: wrap;
+        }
         .timer {
-            width: 300px; height: 300px; border: 6px solid white; display: flex;
-            flex-direction: column; justify-content: center; align-items: center;
-            font-size: 80px; font-weight: bold; color: red; background-color: white; border-radius: 20px;
+            width: 250px;
+            height: 250px;
+            border: 6px solid white;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-size: 70px;
+            font-weight: bold;
+            color: red;
+            background-color: white;
+            border-radius: 20px;
         }
         .team-name {
             font-size: 24px;
@@ -152,10 +172,52 @@
             border: none;
             outline: none;
         }
-        .controls { display: flex; flex-direction: column; align-items: center; gap: 10px; margin-top: 20px; }
-        .row { display: flex; justify-content: center; gap: 10px; }
-        button { background-color: red; color: white; border: none; padding: 10px; font-size: 16px; border-radius: 5px; }
-        .selected { border: 6px solid red; }
+        .controls {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+            margin-top: 20px;
+        }
+        .row {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            flex-wrap: wrap;
+        }
+        button {
+            background-color: red;
+            color: white;
+            border: none;
+            padding: 10px;
+            font-size: 14px;
+            border-radius: 5px;
+            width: 90%;
+        }
+        .selected {
+            border: 6px solid red;
+        }
+
+        /* Media query voor kleinere schermen */
+        @media (max-width: 768px) {
+            .timer-container {
+                flex-direction: column;
+            }
+            .timer {
+                width: 90%;
+                height: 200px;
+                font-size: 50px;
+            }
+            .team-name {
+                font-size: 18px;
+            }
+            .controls {
+                width: 90%;
+            }
+            button {
+                font-size: 12px;
+            }
+        }
     </style>
 </head>
 <body>
