--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
                 updateWeergave();
             }
 
-            // Event listeners voor timer en knoppen
             document.querySelectorAll(".timer").forEach((el, index) => {
                 el.addEventListener("click", () => selecteerTimer(index));
             });
@@ -141,7 +140,7 @@
             justify-content: center;
             gap: 20px;
             margin-bottom: 20px;
-            flex-wrap: wrap;
+            flex-wrap: wrap; /* Dit zorgt ervoor dat de timers zich netjes schalen op verschillende schermgroottes */
         }
         .timer {
             width: 250px;
@@ -151,14 +150,14 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-size: 70px;
+            font-size: 100px;
             font-weight: bold;
             color: red;
             background-color: white;
             border-radius: 20px;
         }
         .team-name {
-            font-size: 24px;
+            font-size: 40px;
             font-weight: bold;
             color: black;
             cursor: pointer;
@@ -177,7 +176,7 @@
             flex-direction: column;
             align-items: center;
             gap: 10px;
-            margin-top: 20px;
+            margin-top: 50px;
         }
         .row {
             display: flex;
@@ -192,16 +191,16 @@
             padding: 10px;
             font-size: 14px;
             border-radius: 5px;
-            width: 90%;
+            width: 90%; /* Knoppen passen zich aan op kleinere schermen */
         }
         .selected {
             border: 6px solid red;
         }
 
-        /* Media query voor kleinere schermen */
+        /* Media query voor kleinere schermen (mobiel) */
         @media (max-width: 768px) {
             .timer-container {
-                flex-direction: column;
+                flex-direction: column; /* Stapel timers verticaal op kleinere schermen */
             }
             .timer {
                 width: 90%;
@@ -240,15 +239,13 @@
             <div id="timer3">60</div>
         </div>
     </div>
-    
+
     <!-- Control Buttons -->
     <div class="controls">
         <div class="row">
             <button id="startBtn">Start</button>
             <button id="stopBtn">Stop</button>
             <button id="resetBtn">Reset</button>
-        </div>
-        <div class="row">
             <button class="adjust-time" data-amount="10">+10 sec</button>
             <button class="adjust-time" data-amount="20">+20 sec</button>
             <button class="adjust-time" data-amount="30">+30 sec</button>
