--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-size: 100px;
+            font-size: 100x;
             font-weight: bold;
             color: red;
             background-color: white;
@@ -182,7 +182,7 @@
             display: flex;
             justify-content: center;
             gap: 10px;
-            flex-wrap: wrap;
+            flex-wrap: wrap; /* Zorgt ervoor dat de knoppen netjes op elkaar staan */
         }
         button {
             background-color: red;
@@ -191,7 +191,8 @@
             padding: 10px;
             font-size: 14px;
             border-radius: 5px;
-            width: 90%; /* Knoppen passen zich aan op kleinere schermen */
+            width: auto; /* Laat de knoppen kleiner worden, maar passen goed in de layout */
+            max-width: 120px; /* Beperk de breedte van de knoppen */
         }
         .selected {
             border: 6px solid red;
@@ -214,7 +215,7 @@
                 width: 90%;
             }
             button {
-                font-size: 12px;
+                font-size: 12px; /* Kleinere tekst voor knoppen op mobiel */
             }
         }
     </style>
@@ -246,6 +247,8 @@
             <button id="startBtn">Start</button>
             <button id="stopBtn">Stop</button>
             <button id="resetBtn">Reset</button>
+        </div>
+        <div class="row">
             <button class="adjust-time" data-amount="10">+10 sec</button>
             <button class="adjust-time" data-amount="20">+20 sec</button>
             <button class="adjust-time" data-amount="30">+30 sec</button>
@@ -267,3 +270,4 @@
     </div>
 </body>
 </html>
+
