--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-size: 100x;
+            font-size: 100px;
             font-weight: bold;
             color: red;
             background-color: white;
@@ -247,8 +247,6 @@
             <button id="startBtn">Start</button>
             <button id="stopBtn">Stop</button>
             <button id="resetBtn">Reset</button>
-        </div>
-        <div class="row">
             <button class="adjust-time" data-amount="10">+10 sec</button>
             <button class="adjust-time" data-amount="20">+20 sec</button>
             <button class="adjust-time" data-amount="30">+30 sec</button>
