--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     document.getElementById(`timer${index}`).textContent = tijd;
                     let teamNaamEl = document.getElementById(`team-name-${index}`);
 
-                    // Als de teamnaam een invoerveld is, vervang het met een div na het bewerken
+                    // Controleer of de teamnaam een invoerveld is en vervang het met een div na bewerking
                     if (teamNaamEl.tagName.toLowerCase() === "input") {
                         let nieuwNaamDiv = document.createElement("div");
                         nieuwNaamDiv.id = `team-name-${index}`;
@@ -270,3 +270,4 @@
     </div>
 </body>
 </html>
+ 
