--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     document.getElementById(`timer${index}`).textContent = tijd;
                     let teamNaamEl = document.getElementById(`team-name-${index}`);
 
-                    // Controleer of de teamnaam een invoerveld is en vervang het met een div na het bewerken
+                    // Controleer of de teamnaam een invoerveld is en vervang het met een div na bewerking
                     if (teamNaamEl.tagName.toLowerCase() === "input") {
                         let nieuwNaamDiv = document.createElement("div");
                         nieuwNaamDiv.id = `team-name-${index}`;
@@ -33,15 +33,60 @@
                 });
             }
 
+            function selecteerTimer(index) {
+                document.querySelectorAll(".timer").forEach(el => el.classList.remove("selected"));
+                geselecteerdeTimer = index;
+                document.getElementById(`timer-container-${index}`).classList.add("selected");
+                document.getElementById("timerSelect").value = index;
+            }
+
+            function startTimer() {
+                if (intervals[geselecteerdeTimer]) return;
+                intervals[geselecteerdeTimer] = setInterval(() => {
+                    if (timers[geselecteerdeTimer] > 0) {
+                        timers[geselecteerdeTimer]--;
+                        updateWeergave();
+                    }
+                }, 1000);
+            }
+
+            function stopTimer() {
+                clearInterval(intervals[geselecteerdeTimer]);
+                intervals[geselecteerdeTimer] = null;
+            }
+
+            function resetTimer() {
+                timers = [60, 60, 60, 60];
+                updateWeergave();
+            }
+
+            function pasTijdAan(aantal) {
+                timers[geselecteerdeTimer] = Math.max(0, timers[geselecteerdeTimer] + aantal);
+                updateWeergave();
+            }
+
+            function toggleTimerZichtbaarheid() {
+                zichtbareTimers[geselecteerdeTimer] = !zichtbareTimers[geselecteerdeTimer];
+                updateWeergave();
+            }
+
+            function stelAangepasteTijdIn() {
+                const invoerSeconden = parseInt(document.getElementById("timeInput").value);
+                if (!isNaN(invoerSeconden) && invoerSeconden >= 0) {
+                    timers[geselecteerdeTimer] = invoerSeconden;
+                    updateWeergave();
+                } else {
+                    alert("Voer een geldig aantal seconden in (minimaal 0)");
+                }
+            }
+
             function maakTeamnaamBewerkbaar(index) {
-                console.log(`Klik op teamnaam voor index ${index}`);  // Debugging: Controleer of de functie wordt aangeroepen
                 let naamLabel = document.getElementById(`team-name-${index}`);
                 let inputVeld = document.createElement("input");
                 inputVeld.type = "text";
                 inputVeld.value = teamNamen[index];
                 inputVeld.classList.add("team-input");
 
-                // Opslaan bij blur of Enter
                 inputVeld.addEventListener("blur", () => slaNieuweTeamnaamOp(index, inputVeld.value));
                 inputVeld.addEventListener("keydown", (event) => {
                     if (event.key === "Enter") {
@@ -49,13 +94,11 @@
                     }
                 });
 
-                console.log(`Vervangen ${naamLabel.id} door invoerveld`); // Debugging: Controleer het vervangen van de div
                 naamLabel.replaceWith(inputVeld);
                 inputVeld.focus();
             }
 
             function slaNieuweTeamnaamOp(index, nieuweNaam) {
-                console.log(`Nieuwe naam voor team ${index}: ${nieuweNaam}`); // Debugging: Controleer de nieuwe naam
                 if (nieuweNaam.trim() !== "") {
                     teamNamen[index] = nieuweNaam;
                 }
@@ -99,7 +142,7 @@
             justify-content: center;
             gap: 20px;
             margin-bottom: 20px;
-            flex-wrap: wrap;
+            flex-wrap: wrap; /* Dit zorgt ervoor dat de timers zich netjes schalen op verschillende schermgroottes */
         }
         .timer {
             width: 250px;
@@ -129,8 +172,6 @@
             text-align: center;
             border: none;
             outline: none;
-            border: 1px solid red; /* Visuele hulp voor input */
-            background-color: #f0f0f0;
         }
         .controls {
             display: flex;
@@ -152,8 +193,8 @@
             padding: 10px;
             font-size: 14px;
             border-radius: 5px;
-            width: auto;
-            max-width: 120px;
+            width: auto; /* Laat de knoppen kleiner worden, maar passen goed in de layout */
+            max-width: 120px; /* Beperk de breedte van de knoppen */
         }
         .selected {
             border: 6px solid red;
@@ -162,7 +203,7 @@
         /* Media query voor kleinere schermen (mobiel) */
         @media (max-width: 768px) {
             .timer-container {
-                flex-direction: column;
+                flex-direction: column; /* Stapel timers verticaal op kleinere schermen */
             }
             .timer {
                 width: 90%;
@@ -176,7 +217,7 @@
                 width: 90%;
             }
             button {
-                font-size: 12px;
+                font-size: 12px; /* Kleinere tekst voor knoppen op mobiel */
             }
         }
     </style>
