--- a/index.html
+++ b/index.html
@@ -197,6 +197,99 @@
         selecteerTimer(0);
         updateWeergave();
     </script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f5f5f5;
+        }
+        h1 {
+            font-size: 80px;
+        }
+        .timer-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 20px;
+            flex-wrap: wrap; /* Dit zorgt ervoor dat de timers zich netjes schalen op verschillende schermgroottes */
+        }
+        .timer {
+            width: 250px;
+            height: 250px;
+            border: 6px solid white;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-size: 100px;
+            font-weight: bold;
+            color: red;
+            background-color: white;
+            border-radius: 20px;
+        }
+        .team-name {
+            font-size: 40px;
+            font-weight: bold;
+            color: black;
+            cursor: pointer;
+            margin-bottom: 20px;
+        }
+        .team-input {
+            font-size: 24px;
+            font-weight: bold;
+            width: 80%;
+            text-align: center;
+            border: none;
+            outline: none;
+        }
+        .controls {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+            margin-top: 40px;
+        }
+        .row {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            flex-wrap: wrap;
+        }
+        button {
+            background-color: red;
+            color: white;
+            border: none;
+            padding: 10px;
+            font-size: 14px;
+            border-radius: 5px;
+            width: auto;
+            max-width: 120px;
+        }
+        .selected {
+            border: 6px solid red;
+        }
+
+        /* Media query voor kleinere schermen (mobiel) */
+        @media (max-width: 768px) {
+            .timer-container {
+                flex-direction: column; /* Stapel timers verticaal op kleinere schermen */
+            }
+            .timer {
+                width: 90%;
+                height: 200px;
+                font-size: 50px;
+            }
+            .team-name {
+                font-size: 18px;
+            }
+            .controls {
+                width: 90%;
+            }
+            button {
+                font-size: 12px; /* Kleinere tekst voor knoppen op mobiel */
+            }
+        }
+    </style>
 </head>
 <body>
     <h1>De Slimste Kameraad</h1>
